examples/06-policy-engines/01-ValidatingAdmissionPolicy/test-vap-owner-label-no-label.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-no-owner-label-vap
spec:
  containers:
  - name: nginx
    image: nginx:latest
