examples/06-policy-engines/01-ValidatingAdmissionPolicy/test-vap-owner-label-with-label.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-with-owner
  labels:
    owner: "conclusionxforce.cloud"
spec:
  containers:
  - name: nginx
    image: nginx:latest
