examples/06-policy-engines/01-ValidatingAdmissionPolicy/test-vap-privileged-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-privileged-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
    securityContext:
      privileged: true
