examples/06-policy-engines/01-ValidatingAdmissionPolicy/deny-privileged-containers-binding.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: deny-privileged-containers-binding
spec:
  policyName: deny-privileged-containers
  validationActions: [Deny, Audit]
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: policy-enforcement
        operator: NotIn
        values: ["disabled"]
      - key: example
        operator: In
        values: ["06-policy-engines"]
