examples/06-policy-engines/01-ValidatingAdmissionPolicy/deny-privilged-containers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
   name: deny-privileged-containers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
  validations:
  - expression: >-
    object.spec.containers.allc,
      !has(c.securityContext) ||
      !has(c.securityContext.privileged) || 
      c.securityContext.privileged== false )
  message: "Privileged containers are not allowed“
  reason: Forbidden
